Cambios en la pagina principal

--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
 body{
-    background-image: url("https://i.pinimg.com/originals/1a/cc/ce/1accce243a827f15e2ef4b69ecfc1ee4.jpg");
+    background-image: url("https://okdiario.com/img/series/2017/08/02/one-piece.jpg");
+    background-size: cover;
 }
 
 .collapsible {
+    display:block;
     background-color: #ffdb4d;
     color: black;
     cursor: pointer;
-    padding: 18px;
+    padding: 1%;
     width: 10%;
     border: 2px solid black;
     text-align: left;
     outline: none;
-    font-size: 20px;
+    font-size: 90%;
+    margin-bottom: 1em;
     
 }
 
@@ -19,50 +22,38 @@ body{
     background-color: #555;
 }
 
-#raids, #coliseums {
-    display: none;
-    padding: 0 18px;
-    display: none;
-    overflow: hidden;
-    background-color: #f1f1f1;
+
+ul {
+    background-color: transparent;
+    font-size: 0;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 90%;
+    
+}
+
+li{
+    background-color: transparent;
+    margin: 0;
+    padding: 0;
+    display: inline;
+    width: 5%;
+}
+
+
+img {
+    
+    width:5%;
+    height:auto;
+    background-color: transparent;
 }
 
 .logo{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
-}
-
-ul {
-    background-color: transparent;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 10%; 
-}
-
-li{
-    background-color: transparent;
-    margin: 5px;
-    padding: 5px;
-}
-
-img {
-    max-width:100%;
-    width:auto;
-    height:auto;
-    background-color: transparent;
-}
-
-.stats {
-  table-layout: fixed;
-  width: 100%;
-  border-collapse: collapse;
-  border: solid 3px #900;
-}
-
-td,th {
-    text-align: right;
+    width: 30%;
+    background-position: center;
 }
 
