--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     cursor: pointer;
     padding: 1%;
     max-width: 30%;
-    width: 10%;
+    width: 15em;
     border: 2px solid black;
     text-align: left;
     outline: none;
