--- a/style.css
+++ b/style.css
@@ -58,3 +58,8 @@ img {
     background-position: center;
 }
 
+@media only screen and (max-width: 600px) {
+    li {
+        display: block;
+    }
+}
